fixed styling issues on mobile

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -34,13 +34,13 @@ h2 {
 h1 {
     padding: 0 50px 10px;
     letter-spacing: 8px;
-    font-size: 40px;
+    font-size: min(40px, 6vw);
 }
 h2 {
     margin-left: 0;
     padding: 0 30px 6px;
     letter-spacing: 5px;
-    font-size: 24px;
+    font-size: min(40px, 3.6vw);
 }
 ul {
     border-left: 1px solid #aaa;
@@ -414,10 +414,11 @@ section {
     .item-grid {
         grid-template-columns: 1fr;
         grid-template-rows: 1fr max-content;
+        padding: 0;
     }
     .item-caption {
         height: auto;
-        order: 2;
+        order: 2 !important;
     }
     .item-inner,
     .item-grid:nth-of-type(odd) .item-caption .item-inner {
@@ -439,7 +440,7 @@ section {
     .item-grid:nth-of-type(odd) .item-caption .item-inner a {
         margin: 0;
         padding: 20px;
-        order: 2;
+        order: 2 !important;
         text-align: right;
     }
 }
@@ -450,7 +451,7 @@ section {
 }
 @media only screen and (max-width: 500px) {
     section {
-        padding: 0 20px;
+        padding: 0 20px 0 65px !important;
     }
     .gallery {
         display: block;
